--- a/central.css
+++ b/central.css
@@ -885,7 +885,7 @@ a svg{
     height: 250px;
     width: 250px;
     z-index: 999;
-    background-color: #fff;
+    background-color: #f9f7f1;
     display: none;
     flex-direction: column;
     align-items: center;
