--- a/central.css
+++ b/central.css
@@ -102,11 +102,10 @@ i{
 }
 
 a svg{
-    color: #1f1d14;
+    color: #1f1b14;
     width: 24px;
     height: 24px;
 }
-
 
 .mobileNav{
     position: fixed;
@@ -114,9 +113,8 @@ a svg{
     right: 0;
     width: 250px;
     height: 100vh;
-    padding: 16px;
-    background-color: #fff;
-    color: #000;
+    background-color: #f9f7f1;
+    color: #1f1b14;
     display: none;
     align-items: flex-start;
     justify-content: center;
@@ -127,10 +125,7 @@ a svg{
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.mobileNav .nav-items-menu .start-button{
-    width: 100%;
+    text-align: center;
 }
 
 .start-button{
@@ -910,6 +905,16 @@ a svg{
 
 /* Mobile Menu */
 
+@media (min-width: 1024px) {
+.mobileHamburger{
+    display: none !important;
+}
+.MobileNavCloseIcon{
+    display: none;
+}
+
+}
+
 @media (max-width: 800px) {
 
     .start-button {
@@ -925,9 +930,22 @@ a svg{
     }
 
     .mobileNav{
+        display: none;
         width: 100%;
-        height: 150px;
+        height: 180px;
         align-items: center;
+    }
+
+    .mobileNav .nav-items-menu{
+        gap: 8px;
+    }
+
+    .mobileNav .nav-items-menu .start-button{
+        width: 100%;
+    }
+    
+    .nav-items-menu a:last-child{
+        padding: 12px 16px;
     }
 
     .header{
